--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "homepage": "https://github.com/ngnjs/ngnx-data-proxy-mongo#readme",
   "dependencies": {
-    "mongodb": "^2.2.22",
-    "musthave": "^1.0.2",
-    "ngn-data": "^0.0.43",
+    "mongodb": "^2.2.24",
+    "ngnx-data-proxy-database": "^1.0.3",
     "shortbus": "^1.2.7"
   },
   "devDependencies": {
+    "musthave": "^1.0.2",
     "babel-eslint": "^7.1.1",
     "fs-extra": "^2.0.0",
     "gulp": "^3.9.1",
@@ -41,11 +41,10 @@
     "gulp-strip-comments": "^2.4.3",
     "localenvironment": "^1.0.2",
     "ngn": "^0.3.28",
-    "shortbus": "^1.2.7",
     "snazzy": "^2.0.1",
     "standard": "^5.3.1",
     "standard-tap": "^1.0.1",
-    "tap-spec": "^4.1.0",
+    "tap-spec": "^4.1.1",
     "tape": "^4.2.2"
   },
   "standard": {
