--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ngnx-data-proxy-mongodb",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Fetch and save data from a MongoDB.",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "tape test/**/*.js | tap-spec && snazzy --verbose"
+    "test": "tape test/**/*.js | tap-spec && standard | snazzy --verbose"
   },
   "repository": {
     "type": "git",
@@ -28,24 +28,24 @@
   },
   "homepage": "https://github.com/ngnjs/ngnx-data-proxy-mongo#readme",
   "dependencies": {
-    "mongodb": "^2.2.24",
-    "ngnx-data-proxy-database": "^1.0.4",
+    "mongodb": "^2.2.26",
+    "ngnx-data-proxy-database": "^1.0.8",
     "shortbus": "^1.2.7"
   },
   "devDependencies": {
     "musthave": "^1.0.2",
-    "babel-eslint": "^7.1.1",
-    "fs-extra": "^2.0.0",
+    "babel-eslint": "^7.2.3",
+    "fs-extra": "^2.1.2",
     "gulp": "^3.9.1",
-    "gulp-header": "^1.8.7",
-    "gulp-strip-comments": "^2.4.3",
+    "gulp-header": "^1.8.8",
+    "gulp-strip-comments": "^2.4.5",
     "localenvironment": "^1.0.2",
-    "ngn": "^0.3.28",
-    "snazzy": "^2.0.1",
-    "standard": "^5.3.1",
+    "ngn": "^0.3.30",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.2",
     "standard-tap": "^1.0.1",
     "tap-spec": "^4.1.1",
-    "tape": "^4.2.2"
+    "tape": "^4.6.3"
   },
   "standard": {
     "parser": "babel-eslint",
